# mostrobotpy

./: .bazel_uncovered_ignore  .bazelignore  .bazelrc  .gitignore  0001-Patch-to-robotpy-version.patch  BUILD.bazel  MODULE.bazel  TEMP_replacements.py  WORKSPACE  add_stuff.sh  copy.bara.sky  copybara_pull_from_mirror.py  generate_build_files.py  linux_gen.patch  notes.txt  osx_gen.patch  python_rules.bzl  rdev.toml  requirements.in.txt  requirements.txt  requirements_linux.txt  requirements_lock.txt  requirements_osx.txt  requirements_windows.txt  symbol_dumpers.py  testing_requirements.txt  testing_requirements_lock.txt  version.bzl  windows_gen.patch
bazel_scripts/: BUILD.bazel  copy_native_file.bzl  file_resolver_utils.bzl  generate_build_file.py  generate_build_info.bzl  generate_native_build_info.bzl  hatch_nativelib_helpers.bzl  native_lib_helpers.bzl  pybind_rules.bzl  render_build_file.py  render_native_libinit.py  render_other_build_file.py  semiwrap_helpers.bzl  wrapper.py
bazel_scripts/debug/: HACK_fix_pypi.py  copy_init_files.py  copy_stuff_to_test_directory.py
bazel_scripts/semiwrap_headers/: BUILD.bazel
requirement_locks/3.13/: BUILD.bazel  requirements_lock.txt  requirements_windows.txt  testing_requirements_lock.txt  testing_requirements_windows.txt
robotbuild_generation/: BUILD.bazel  load_project_config.py  pybind_gen_utils.py  pybind_on_build_dl.py  pybind_on_build_dl_shim.py  pybind_on_build_gen.py  pybind_on_build_gen_shim.py
subprojects/pyntcore/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/pyntcore/examples/: BUILD.bazel
subprojects/pyntcore/ntcore/: BUILD.bazel
subprojects/pyntcore/semiwrap/: NetworkTableInstance.yml  ntcore_cpp.yml
subprojects/pyntcore/tests/: BUILD.bazel
subprojects/robotpy-apriltag/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-apriltag/robotpy_apriltag/: BUILD.bazel
subprojects/robotpy-apriltag/tests/: BUILD.bazel  test_detection.py
subprojects/robotpy-cscore/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-cscore/cscore/: BUILD.bazel
subprojects/robotpy-cscore/examples/: BUILD.bazel
subprojects/robotpy-cscore/semiwrap/: CameraServer.yml  cscore_cv.yml  cscore_oo.yml
subprojects/robotpy-cscore/tests/: BUILD.bazel
subprojects/robotpy-hal/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-hal/hal/: BUILD.bazel  version.py
subprojects/robotpy-hal/semiwrap/: AddressableLED.yml  AddressableLEDTypes.yml  CAN.yml  Counter.yml  DriverStation.yml  DriverStationTypes.yml  HALBase.yml  PWM.yml  Ports.yml  Power.yml  PowerDistribution.yml  SimDevice.yml
subprojects/robotpy-hal/tests/: BUILD.bazel
subprojects/robotpy-halsim-ds-socket/: BUILD.bazel  pyproject.toml
subprojects/robotpy-halsim-ds-socket/halsim_ds_socket/: BUILD.bazel
subprojects/robotpy-halsim-ds-socket/tests/: BUILD.bazel
subprojects/robotpy-halsim-gui/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-halsim-gui/halsim_gui/: BUILD.bazel
subprojects/robotpy-halsim-gui/tests/: BUILD.bazel
subprojects/robotpy-halsim-ws/: BUILD.bazel  pyproject.toml
subprojects/robotpy-halsim-ws/tests/: BUILD.bazel
subprojects/robotpy-native-apriltag/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-native-datalog/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-native-ntcore/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-native-romi/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-native-wpihal/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-native-wpilib/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-native-wpimath/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-native-wpinet/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-native-wpiutil/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-native-xrp/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-romi/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-romi/tests/: BUILD.bazel
subprojects/robotpy-wpilib/: .gitignore  BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-wpilib/semiwrap/: AddressableLED.yml  AnalogEncoder.yml  CAN.yml  Color.yml  Color8Bit.yml  Compressor.yml  DoubleSolenoid.yml  DriverStation.yml  DutyCycle.yml  DutyCycleEncoder.yml  Encoder.yml  Gamepad.yml  IterativeRobotBase.yml  LEDPattern.yml  Notifier.yml  PWM.yml  PneumaticHub.yml  PneumaticsBase.yml  PowerDistribution.yml  RobotBase.yml  RobotController.yml  SensorUtil.yml  Servo.yml  Solenoid.yml  TimedRobot.yml  Timer.yml  Watchdog.yml
subprojects/robotpy-wpilib/tests/: BUILD.bazel  test_notifier.py
subprojects/robotpy-wpilib/wpilib/: BUILD.bazel
subprojects/robotpy-wpilog/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-wpilog/semiwrap/: DataLog.yml
subprojects/robotpy-wpimath/: .gitignore  BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-wpimath/semiwrap/: MathUtil.yml
subprojects/robotpy-wpimath/tests/: BUILD.bazel
subprojects/robotpy-wpimath/tools/: BUILD.bazel
subprojects/robotpy-wpimath/wpimath/: BUILD.bazel  __init__.py
subprojects/robotpy-wpinet/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-wpinet/examples/: BUILD.bazel
subprojects/robotpy-wpinet/tests/: BUILD.bazel
subprojects/robotpy-wpinet/wpinet/: BUILD.bazel
subprojects/robotpy-wpiutil/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-wpiutil/examples/: BUILD.bazel
subprojects/robotpy-wpiutil/semiwrap/: SendableRegistry.yml
subprojects/robotpy-wpiutil/tests/: BUILD.bazel
subprojects/robotpy-wpiutil/wpiutil/: BUILD.bazel
subprojects/robotpy-xrp/: BUILD.bazel  generated_build_info.bzl  pyproject.toml
subprojects/robotpy-xrp/semiwrap/: XRPGyro.yml
(+193 files in other folders)
