exports_files(["testing_requirements.txt", "requirements.txt"])

filegroup(
    name = "generated_files",
    srcs = [
        "//subprojects/pyntcore:generated_files",
        "//subprojects/robotpy-apriltag:generated_files",
        "//subprojects/robotpy-cscore:generated_files",
        "//subprojects/robotpy-hal:generated_files",
        "//subprojects/robotpy-halsim-gui:generated_files",
        "//subprojects/robotpy-romi:generated_files",
        "//subprojects/robotpy-wpilib:generated_files",
        "//subprojects/robotpy-wpimath:generated_files",
        "//subprojects/robotpy-wpimath/tests/cpp:generated_files",
        "//subprojects/robotpy-wpinet:generated_files",
        "//subprojects/robotpy-wpiutil:generated_files",
        "//subprojects/robotpy-xrp:generated_files",
    ],
)
