exports_files([
    "testing_requirements.txt",
    "requirements.txt",
])

filegroup(
    name = "generated_files",
    srcs = [
        # "//subprojects/pyntcore:generated_files",
        # "//subprojects/robotpy-apriltag:generated_files",
        # "//subprojects/robotpy-cscore:generated_files",
        # "//subprojects/robotpy-hal:generated_files",
        # "//subprojects/robotpy-halsim-gui:generated_files",
        # "//subprojects/robotpy-romi:generated_files",
        # "//subprojects/robotpy-wpilib:generated_files",
        # "//subprojects/robotpy-wpimath:generated_files",
        # "//subprojects/robotpy-wpimath/tests/cpp:generated_files",
        # "//subprojects/robotpy-wpinet:generated_files",
        # "//subprojects/robotpy-wpiutil:generated_files",
        # "//subprojects/robotpy-xrp:generated_files",
    ],
)

# This is a helper to run all of the pregeneration scripts at once.
write_source_files(
    name = "write_all",
    additional_update_targets = [
        "//subprojects/pyntcore:generate_build_info",
        "//subprojects/robotpy-apriltag:generate_build_info",
        "//subprojects/robotpy-cscore:generate_build_info",
        "//subprojects/robotpy-hal:generate_build_info",
        "//subprojects/robotpy-halsim-gui:generate_build_info",
        "//subprojects/robotpy-romi:generate_build_info",
        "//subprojects/robotpy-wpilib:generate_build_info",
        "//subprojects/robotpy-wpimath:generate_build_info",
        "//subprojects/robotpy-wpimath/tests/cpp:generate_build_info",
        "//subprojects/robotpy-wpinet:generate_build_info",
        "//subprojects/robotpy-wpiutil:generate_build_info",
        "//subprojects/robotpy-xrp:generate_build_info",
    ],
    tags = ["pregeneration"],
)

