bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "bzlmodrio-allwpilib", version = "2025.3.2.bcr1")
bazel_dep(name = "rules_cc", version = "0.0.15")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "aspect_bazel_lib", version = "2.16.0")
bazel_dep(name = "caseyduquettesc_rules_python_pytest", version = "1.1.1", repo_name = "rules_python_pytest")

# local_path_override(
#     module_name = "pybind11_bazel",
#     path = "/home/pjreiniger/git/robotpy/pybind11_bazel",
# )

archive_override(
    module_name = "pybind11_bazel",
    patch_strip = 1,
    patches = [
        "//:0001-Patch-to-robotpy-version.patch",
    ],
    strip_prefix = "pybind11_bazel-2b6082a4d9d163a52299718113fa41e4b7978db5",
    urls = ["https://github.com/pybind/pybind11_bazel/archive/2b6082a4d9d163a52299718113fa41e4b7978db5.tar.gz"],
)

archive_override(
    module_name = "bzlmodrio-allwpilib",
    strip_prefix = "bzlmodRio-allwpilib-4f390713a5ec66a2b6e78f5af30bbbe4dc434e04",
    urls = ["https://github.com/bzlmodrio/bzlmodrio-allwpilib/archive/4f390713a5ec66a2b6e78f5af30bbbe4dc434e04.tar.gz"],
)

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
    dev_dependency = True,
)
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "mostrobotpy_pip_deps",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
    # requirements_windows = "//:requirements_windows.txt",
)
use_repo(pip, "mostrobotpy_pip_deps")

pip.parse(
    hub_name = "mostrobotpy_tests_pip_deps",
    python_version = "3.10",
    requirements_lock = "//:testing_requirements_lock.txt",
    # requirements_windows = "//:testing_requirements_windows.txt",
)
use_repo(pip, "mostrobotpy_tests_pip_deps")
