
bazel_dep(name = "rules_java", version = "8.14.0")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "com_github_google_copybara",
    integrity = "sha256-IHW6y6WXJFjX9RYD+IwVAMwAbEo36fLqonIKR+FaqpQ=",
    urls = ["https://github.com/google/copybara/releases/download/v20251027/copybara_deploy.jar"],
)