load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# bazel run //:requirements.update / bazel test //:requirements_test
compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    # requirements_windows = ":requirements_windows.txt",
    python_version = "3.13",
    requirements_in = "//:requirements.txt",
    requirements_txt = ":requirements_lock.txt",
    tags = ["no-systemcore"],
)

# bazel run //:testing_requirements.update / bazel test //:testing_requirements_test
compile_pip_requirements(
    name = "testing_requirements",
    extra_args = ["--allow-unsafe"],
    # requirements_windows = ":testing_requirements_windows.txt",
    python_version = "3.13",
    requirements_in = "//:testing_requirements.txt",
    requirements_txt = ":testing_requirements_lock.txt",
    tags = ["no-systemcore"],
)
