load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/pyntcore:generated_build_info.bzl", "define_pybind_library", "ntcore_extension")

generate_build_info(
    name = "ntcore",
    local_libraries = [
        "//subprojects/robotpy-native-ntcore:import",
        "//subprojects/robotpy-native-wpinet:import",
        "//subprojects/robotpy-native-wpiutil:import",
        "//subprojects/robotpy-native-datalog:import",
        "//subprojects/robotpy-wpinet:import",
        "//subprojects/robotpy-wpiutil:import",
        "//subprojects/robotpy-wpilog:import",
    ],
    pkgcfgs = [
        "$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc",
        "$(location //subprojects/robotpy-native-wpinet:import)/site-packages/native/wpinet/robotpy-native-wpinet.pc",
        "$(location //subprojects/robotpy-native-ntcore:import)/site-packages/native/ntcore/robotpy-native-ntcore.pc",
        "$(location //subprojects/robotpy-native-datalog:import)/site-packages/native/datalog/robotpy-native-datalog.pc",
        "$(location //subprojects/robotpy-wpinet:import)/site-packages/wpinet/wpinet.pc",
        "$(location //subprojects/robotpy-wpiutil:import)/site-packages/wpiutil/wpiutil.pc",
        "$(location //subprojects/robotpy-wpilog:import)/site-packages/wpilog/wpilog.pc",
    ],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/*.yml"]),
)

ntcore_extension(
    entry_point = ["ntcore/src/ntcore.cpp"],
    extra_hdrs = glob([
        "ntcore/src/*.h",
        "ntcore/src/*.inl",
    ]),
    extra_srcs = glob(
        ["ntcore/src/*.cpp"],
        exclude = ["ntcore/src/ntcore.cpp"],
    ),
    includes = ["ntcore"],
    deps = [
        "//subprojects/robotpy-wpilog:wpilog_pybind_library",
        "//subprojects/robotpy-wpinet:wpinet_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "//subprojects/robotpy-native-ntcore:ntcore",
    ],
)

define_pybind_library(
    name = "ntcore",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "ntcore.generated_files",
    ],
    visibility = ["//visibility:public"],
)
