load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/pyntcore:generated_build_info.bzl", "define_pybind_library", "ntcore_extension")

generate_build_info(
    name = "ntcore",
    local_pkgcfgs = [
        ("//subprojects/robotpy-native-ntcore:import", ["$(location //subprojects/robotpy-native-ntcore:import)/site-packages/native/ntcore/robotpy-native-ntcore.pc"]),
        ("//subprojects/robotpy-native-wpinet:import", ["$(location //subprojects/robotpy-native-wpinet:import)/site-packages/native/wpinet/robotpy-native-wpinet.pc"]),
        ("//subprojects/robotpy-native-wpiutil:import", ["$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc"]),
        ("//subprojects/robotpy-wpinet:import", ["$(location //subprojects/robotpy-wpinet:import)/site-packages/wpinet/wpinet.pc"]),
        ("//subprojects/robotpy-wpiutil:import", ["$(location //subprojects/robotpy-wpiutil:import)/site-packages/wpiutil/wpiutil.pc"]),
    ],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/*.yml"]),
)

ntcore_extension(
    entry_point = ["ntcore/src/ntcore.cpp"],
    extra_hdrs = glob([
        "ntcore/src/*.h",
        "ntcore/src/*.inl",
    ]),
    extra_srcs = glob(
        ["ntcore/src/*.cpp"],
        exclude = ["ntcore/src/ntcore.cpp"],
    ),
    includes = ["ntcore"],
    deps = [
        "//subprojects/robotpy-native-ntcore:ntcore",
        "//subprojects/robotpy-wpinet:wpinet_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

define_pybind_library(
    name = "ntcore",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "ntcore.generated_files",
    ],
    visibility = ["//visibility:public"],
)
