load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:file_resolver_utils.bzl", "local_extension_util", "local_pc_file_util")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/pyntcore:generated_build_info.bzl", "define_pybind_library", "ntcore_extension")

generate_build_info(
    name = "ntcore",
    local_pkgcfgs = local_pc_file_util(
                        "//subprojects/robotpy-native-ntcore",
                        ["native/ntcore/robotpy-native-ntcore.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-wpinet",
                        ["native/wpinet/robotpy-native-wpinet.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-wpiutil",
                        ["native/wpiutil/robotpy-native-wpiutil.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-wpiutil",
                        [
                            "wpiutil/wpiutil.pc",
                            "wpiutil/wpiutil-casters.pc",
                            "wpiutil/wpiutil-casters.pybind11.json",
                        ],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-wpinet",
                        ["wpinet/wpinet.pc"],
                    ),
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/*.yml"]),
)

ntcore_extension(
    entry_point = ["ntcore/src/ntcore.cpp"],
    extra_hdrs = glob([
        "ntcore/src/*.h",
        "ntcore/src/*.inl",
    ]),
    extra_srcs = glob(
        ["ntcore/src/*.cpp"],
        exclude = ["ntcore/src/ntcore.cpp"],
    ),
    includes = ["ntcore"],
    deps = [
        "//subprojects/robotpy-native-ntcore:ntcore",
        local_extension_util("//subprojects/robotpy-wpinet", "wpinet"),
        local_extension_util("//subprojects/robotpy-wpiutil", "wpiutil"),
    ],
)

define_pybind_library(
    name = "ntcore",
    version = MOSTROBOTPY_VERSION,
)
