load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-apriltag:generated_build_info.bzl", "apriltag_extension", "define_pybind_library")
load("@mostrobotpy_tests_pip_deps//:requirements.bzl", "requirement")

generate_build_info(
    name = "apriltag",
    local_libraries = [
        "//subprojects/robotpy-native-apriltag:import",
        "//subprojects/robotpy-native-wpimath:import",
        "//subprojects/robotpy-native-wpiutil:import",
        "//subprojects/robotpy-wpiutil:import",
        "//subprojects/robotpy-wpimath:import",
    ],
    pkgcfgs = [
        "$(location //subprojects/robotpy-native-wpimath:import)/site-packages/native/wpimath/robotpy-native-wpimath.pc",
        "$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc",
        "$(location //subprojects/robotpy-native-apriltag:import)/site-packages/native/apriltag/robotpy-native-apriltag.pc",
        "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/wpimath.pc",
        "$(location //subprojects/robotpy-wpiutil:import)/site-packages/wpiutil/wpiutil.pc",
    ],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/*.yml"]),
)

apriltag_extension(
    entry_point = ["robotpy_apriltag/src/main.cpp"],
    header_to_dat_deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/apriltag:header_files",
    ],
    deps = [
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/apriltag:shared",
    ],
    extra_pyi_deps = [requirement("numpy")],
)

define_pybind_library(
    name = "apriltag",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "apriltag.generated_files",
    ],
    visibility = ["//visibility:public"],
)
