load("@mostrobotpy_tests_pip_deps//:requirements.bzl", "requirement")
load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:file_resolver_utils.bzl", "local_pc_file_util")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-apriltag:generated_build_info.bzl", "apriltag_extension", "define_pybind_library")

generate_build_info(
    name = "apriltag",
    local_pkgcfgs = local_pc_file_util(
                        "//subprojects/robotpy-native-wpimath",
                        ["native/wpimath/robotpy-native-wpimath.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-wpiutil",
                        ["native/wpiutil/robotpy-native-wpiutil.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-apriltag",
                        ["native/apriltag/robotpy-native-apriltag.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-wpiutil",
                        [
                            "wpiutil/wpiutil.pc",
                            "wpiutil/wpiutil-casters.pc",
                            "wpiutil/wpiutil-casters.pybind11.json",
                        ],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-wpimath",
                        [
                            "wpimath/wpimath.pc",
                            "wpimath/wpimath-casters.pc",
                            "wpimath/wpimath-casters.pybind11.json",
                        ],
                    ),
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/*.yml"]),
)

apriltag_extension(
    entry_point = ["robotpy_apriltag/src/main.cpp"],
    extra_pyi_deps = [requirement("numpy")],
    deps = [
        "//subprojects/robotpy-native-apriltag:apriltag",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

define_pybind_library(
    name = "apriltag",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "apriltag.generated_files",
    ],
    visibility = ["//visibility:public"],
)
