load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//subprojects/robotpy-cscore:generated_build_info.bzl", "cscore_extension", "define_pybind_library", "publish_library_casters")

# generate_build_info(
#     name = "cscore",
#     header_packages = [
#         "@bzlmodrio-allwpilib//libraries/cpp/cameraserver:header_files",
#         "@bzlmodrio-allwpilib//libraries/cpp/cscore:header_files",
#     ],
#     local_libraries = [
#         "//subprojects/robotpy-native-wpiutil:import",
#         "//subprojects/robotpy-native-wpinet:import",
#         "//subprojects/robotpy-native-ntcore:import",
#         "//subprojects/robotpy-wpiutil:import",
#         "//subprojects/robotpy-wpinet:import",
#         "//subprojects/pyntcore:import",
#     ],
#     pkgcfgs = [
#         "$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc",
#         "$(location //subprojects/robotpy-native-wpinet:import)/site-packages/native/wpinet/robotpy-native-wpinet.pc",
#         "$(location //subprojects/robotpy-native-ntcore:import)/site-packages/native/ntcore/robotpy-native-ntcore.pc",
#         "$(location //subprojects/robotpy-wpiutil:import)/site-packages/wpiutil/wpiutil.pc",
#         "$(location //subprojects/robotpy-wpinet:import)/site-packages/wpinet/wpinet.pc",
#         "$(location //subprojects/pyntcore:import)/site-packages/ntcore/ntcore.pc",
#     ],
#     pyproject_toml = ":pyproject.toml",
#     yaml_files = glob(["semiwrap/*.yml"]),
# )

publish_library_casters(
    typecasters_srcs = ["cscore/cvnp/cvnp.h"],
)

cscore_extension(
    entry_point = ["cscore/src/main.cpp"],
    extra_hdrs = glob(["cscore/cvnp/*.h"]),
    extra_srcs = glob(
        ["cscore/cvnp/*.cpp"],
        exclude = ["cscore/src/main.cpp"],
    ),
    header_to_dat_deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/cameraserver:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/cscore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
        "@bzlmodrio-opencv//libraries/cpp/opencv:header_files",
    ],
    includes = ["cscore"],
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-wpinet:wpinet_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/cameraserver:static",
        "@bzlmodrio-allwpilib//libraries/cpp/cscore:static",
        "@bzlmodrio-opencv//libraries/cpp/opencv:static",
    ],
)

define_pybind_library(
    name = "cscore",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "cscore.generated_files",
    ],
    visibility = ["//visibility:public"],
)
