load("@mostrobotpy_tests_pip_deps//:requirements.bzl", "requirement")
load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//subprojects/robotpy-cscore:generated_build_info.bzl", "cscore_extension", "define_pybind_library", "publish_library_casters")

# generate_build_info(
#     name = "cscore",
#     header_packages = [
#         "@bzlmodrio-allwpilib//libraries/cpp/cameraserver:header_files",
#         "@bzlmodrio-allwpilib//libraries/cpp/cscore:header_files",
#     ],
#     local_pkgcfgs = local_pc_file_util("//subprojects/robotpy-native-wpiutil", ["native/wpiutil/robotpy-native-wpiutil.pc"])
#     + local_pc_file_util("//subprojects/robotpy-native-ntcore", ["native/ntcore/robotpy-native-ntcore.pc"])
#     + local_pc_file_util("//subprojects/robotpy-native-wpinet", ["native/wpinet/robotpy-native-wpinet.pc"])
#     + local_pc_file_util("//subprojects/robotpy-wpiutil", ["wpiutil/wpiutil.pc", "wpiutil/wpiutil-casters.pc", "wpiutil/wpiutil-casters.pybind11.json"])
#     + local_pc_file_util("//subprojects/robotpy-wpinet", ["wpinet/wpinet.pc"])
#     + local_pc_file_util("//subprojects/pyntcore", ["ntcore/ntcore.pc"]),
#     pyproject_toml = ":pyproject.toml",
#     yaml_files = glob(["semiwrap/*.yml"]),
# )

publish_library_casters(
    typecasters_srcs = ["cscore/cvnp/cvnp.h"],
)

cscore_extension(
    entry_point = ["cscore/src/main.cpp"],
    extra_hdrs = glob(["cscore/cvnp/*.h"]),
    extra_pyi_deps = [requirement("numpy")],
    extra_srcs = glob(
        ["cscore/cvnp/*.cpp"],
        exclude = ["cscore/src/main.cpp"],
    ),
    header_to_dat_deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/cameraserver:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/cscore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
        "@bzlmodrio-opencv//libraries/cpp/opencv:header_files",
    ],
    includes = ["cscore"],
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-wpinet:wpinet_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/cameraserver:static",
        "@bzlmodrio-allwpilib//libraries/cpp/cscore:static",
        "@bzlmodrio-opencv//libraries/cpp/opencv:static",
    ],
)

define_pybind_library(
    name = "cscore",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "cscore.generated_files",
    ],
    visibility = ["//visibility:public"],
)
