load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-hal:generated_build_info.bzl", "define_pybind_library", "hal_simulation_extension", "wpihal_extension")

generate_build_info(
    name = "hal",
    local_libraries = [
        "//subprojects/robotpy-native-datalog:import",
        "//subprojects/robotpy-native-ntcore:import",
        "//subprojects/robotpy-native-wpihal:import",
        "//subprojects/robotpy-native-wpinet:import",
        "//subprojects/robotpy-native-wpiutil:import",
        "//subprojects/pyntcore:import",
        "//subprojects/robotpy-wpilog:import",
        "//subprojects/robotpy-wpinet:import",
        "//subprojects/robotpy-wpiutil:import",
    ],
    pkgcfgs = [
        "$(location //subprojects/robotpy-native-datalog:import)/site-packages/native/datalog/robotpy-native-datalog.pc",
        "$(location //subprojects/robotpy-native-ntcore:import)/site-packages/native/ntcore/robotpy-native-ntcore.pc",
        "$(location //subprojects/robotpy-native-wpinet:import)/site-packages/native/wpinet/robotpy-native-wpinet.pc",
        "$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc",
        "$(location //subprojects/robotpy-native-wpihal:import)/site-packages/native/wpihal/robotpy-native-wpihal.pc",
        "$(location //subprojects/robotpy-wpinet:import)/site-packages/wpinet/wpinet.pc",
        "$(location //subprojects/robotpy-wpilog:import)/site-packages/wpilog/wpilog.pc",
        "$(location //subprojects/robotpy-wpiutil:import)/site-packages/wpiutil/wpiutil.pc",
        "$(location //subprojects/pyntcore:import)/site-packages/ntcore/ntcore.pc",
    ],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/**/*.yml"]),
)

hal_simulation_extension(
    entry_point = ["hal/simulation/main.cpp"],
    extension_name = "_simulation",
    extra_hdrs = glob(["hal/simulation/*.h"]),
    extra_srcs = glob(
        ["hal/simulation/*.cpp"],
        exclude = ["hal/simulation/main.cpp"],
    ),
    includes = ["hal/simulation"],
    deps = [
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "//subprojects/robotpy-native-wpihal:wpihal",
    ],
)

wpihal_extension(
    entry_point = ["hal/src/hal.cpp"],
    extension_name = "_wpiHal",
    deps = [
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "//subprojects/robotpy-native-wpihal:wpihal",
    ],
)

define_pybind_library(
    name = "hal",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "hal_simulation.generated_files",
        "wpihal.generated_files",
    ],
    visibility = ["//visibility:public"],
)
